--- a/app/src/main/res/layout/activity_insta.xml
+++ b/app/src/main/res/layout/activity_insta.xml
@@ -7,4 +7,47 @@
         android:layout_height="match_parent"
         tools:context=".InstaActivity">
 
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            app:srcCompat="@drawable/instapost"
+            android:id="@+id/logo"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+    <FrameLayout
+            android:id="@+id/fragment_place"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/logo"
+            app:layout_constraintBottom_toTopOf="@id/icon_tabs"/>
+    <TableLayout android:layout_width="match_parent"
+                 android:layout_height="100dp"
+                 app:layout_constraintBottom_toBottomOf="parent"
+                 android:id="@+id/icon_tabs"
+                 android:stretchColumns="*">
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="100dp"
+                  android:id="@+id/icons">
+            <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/home" android:id="@+id/home"
+                    android:layout_margin="15dp"/>
+            <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/users" android:id="@+id/users"
+                    android:layout_margin="15dp"/>
+            <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/add_pictures"
+                    android:id="@+id/addImage" android:layout_margin="15dp"/>
+            <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/hashtag"
+                    android:id="@+id/hashtags" android:layout_margin="15dp"/>
+            <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/me" android:id="@+id/myProfile"
+                    android:layout_margin="15dp"/>
+        </TableRow>
+    </TableLayout>
 </android.support.constraint.ConstraintLayout>
