--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,14 +21,14 @@
 
     <EditText android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:id="@+id/username"
-              android:hint="@string/username"
+              android:id="@+id/email"
+              android:hint="@string/email"
               app:layout_constraintTop_toBottomOf="@id/scroll"
               android:gravity="center"/>
 
     <EditText android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              app:layout_constraintTop_toBottomOf="@+id/username"
+              app:layout_constraintTop_toBottomOf="@+id/email"
               android:id="@+id/password"
               android:hint="@string/password"
               android:gravity="center"/>
